# CashPilot

./: .coderabbit.yaml  .dockerignore  .ghost-portfolio.yml  .gitguardian.yaml  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.worker  README.md  ROADMAP.md  SECURITY.md  codecov.yml  docker-compose.build.yml  docker-compose.fleet.yml  docker-compose.standalone.yml  docker-compose.yml  entrypoint.sh  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-worker.txt  requirements.txt  sitemap.xml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_service.yml
.github/workflows/: build.yml  codeql.yml  dockerhub-description.yml  docs.yml  lint.yml  release.yml  stale.yml  test.yml
AUTOPILOT-WORKLOG/: index.html
GOAL/: index.html
app/: auth.py  catalog.py  compose_generator.py  database.py  deps.py  exchange_rates.py  fleet_key.py  main.py  metrics.py  orchestrator.py  setup_token.py  worker_api.py  worker_proxy.py
app/collectors/: __init__.py  anyone.py  base.py  bitping.py  bytelixir.py  earnapp.py  earnfm.py  grass.py  honeygain.py  iproyal.py  mystnodes.py  (+6 more)
architecture/: index.html
docs/: AUTOPILOT-WORKLOG.md  GOAL.md  architecture.md  devto-article-draft.md  fleet.md  getting-started.md  growth-strategy.md  index.md  upgrade-v1.md
fleet/: index.html
getting-started/: index.html
growth-strategy/: index.html
guides/: index.html
scripts/: generate_docs.py
search/: search_index.json
services/: _schema.yml
tests/: conftest.py  test_auth.py  test_auth_extended.py  test_catalog.py  test_catalog_loader.py  test_collectors.py  test_collectors_deep.py  test_collectors_extended.py  test_compose.py  test_coverage_gaps.py  test_database.py  test_eligibility.py  test_exchange_rates.py  test_exchange_rates_extended.py  test_fleet_key.py  test_main_deploy_routes.py  test_main_routes.py  test_metrics.py  test_orchestrator_coverage.py  test_session_revocation.py  test_setup_token.py  test_summary_bonus.py  test_worker_api_coverage.py  test_worker_keys.py  test_worker_resources.py  test_workers.py
unraid/: cashpilot-worker.xml  cashpilot.xml
upgrade-v1/: index.html
(+188 files in other folders)
